--- a/basics/Implnheritence/app/src/main/res/layout/activity_main.xml
+++ b/basics/Implnheritence/app/src/main/res/layout/activity_main.xml
@@ -4,9 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:padding="@dimen/page_margin"
     android:gravity="center"
     android:orientation="vertical"
+    android:padding="@dimen/page_margin"
     tools:context=".MainActivity">
 
 
@@ -14,8 +14,45 @@
         android:id="@+id/edtTxtPersonName"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:inputType="textPersonName"
-        android:hint="@string/enter_name" />
+        android:hint="@string/enter_name"
+        android:inputType="textPersonName" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal">
+
+        <com.google.android.material.chip.ChipGroup
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="center"
+            app:selectionRequired="true"
+            app:singleSelection="true"
+            app:checkedChip="@id/chipStudentId">
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipStudentId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/student"
+                style="@style/Widget.MaterialComponents.Chip.Choice"/>
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipMusicianId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/musician"
+                style="@style/Widget.MaterialComponents.Chip.Choice"/>
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipTeacherId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/teacher"
+                style="@style/Widget.MaterialComponents.Chip.Choice"/>
+        </com.google.android.material.chip.ChipGroup>
+    </LinearLayout>
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/btnAddName"
@@ -34,5 +71,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/clear" />
+
 
 </LinearLayout>
