--- a/basics/Implnheritence/app/src/main/res/layout/activity_main.xml
+++ b/basics/Implnheritence/app/src/main/res/layout/activity_main.xml
@@ -24,6 +24,7 @@
         android:orientation="horizontal">
 
         <com.google.android.material.chip.ChipGroup
+            android:id="@+id/personGroupId"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:gravity="center"
