--- a/basics/Implnheritence/app/src/main/res/layout/activity_main.xml
+++ b/basics/Implnheritence/app/src/main/res/layout/activity_main.xml
@@ -52,6 +52,13 @@
                 android:layout_height="wrap_content"
                 android:text="@string/teacher"
                 style="@style/Widget.MaterialComponents.Chip.Choice"/>
+
+            <com.google.android.material.chip.Chip
+                android:id="@+id/chipAnimalId"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/cat"
+                style="@style/Widget.MaterialComponents.Chip.Choice"/>
         </com.google.android.material.chip.ChipGroup>
     </LinearLayout>
 
